gcc/testsuite/gcc.dg/cilk-plus/cilk_keywords_test/errors/no_args_error.c
int spawn_1 ();
typedef int(*func) (int);

void check () {
      func var = spawn_1;
        _Cilk_spawn var (); /* { dg-error "too few arguments to function" } */
}

